<resources>
    <string name="app_name">SimpleContact</string>

    <string name="title_sectionContacts">联系人目录</string>
    <string name="title_sectionSearch">搜索联系人</string>
    <string name="title_sectionAdd">添加联系人</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="navigation_drawer_list">
        <item>@string/title_sectionContacts</item>
        <item>@string/title_sectionSearch</item>
        <item>@string/title_sectionAdd</item>
        <item>@string/title_section3</item>
    </string-array>

    <string name="snackbar_text_loading">读取数据中，请稍候。</string>
    <string name="snackbar_text_loaded">读取数据完成。</string>

    <string name="fragment_search_content">搜索条件</string>
    <string name="fragment_search_hint">搜索条件</string>

    <string name="fragment_add_name">姓名</string>
    <string name="fragment_add_phone_number">号码</string>
    <string name="fragment_add_tag">标签</string>

    <string name="action_search">搜索</string>
    <string name="action_new">新建</string>
    <string name="action_settings">设置</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
